yoshimi 1.4.1 M

2016-11-5 Will
* Direct -> gui part kits done.
* Direct -> gui part system sends done.
* Direct -> gui resonance graph done.
* corrected errors in docs.

2016-11-4 Will
* Direct -> gui oscllator done.
* Bugfixes: some oscillator direct access errors :(
* Updated docs.
* Direct -> gui resonance mostly done (not points).
* Minor direct access optimisations.

2016-11-1 Will
* Cmake fix: nucurses now compulsory, but ncursesw optional.

2016-10-30 Will
* Implemented kit item crossfades (in pairs).
* A couple of small bugfixes on the new crossfade.
* Docs updated.

2016-10-29 Will
* Microtonal GUI now only needs 'Apply' button on text fields.
* Setting an invalid root now leaves root and bank unchanged.
* First time bank root IDs now start at 5 spaced 5 apart.
* Added '*' to current root/bank in CLI lists.

2016-10-28 Will
* Separated key shift from main tuning.
* Oops - got that wrong :(
* Microtonal optimisation using a key map table - better!

2016-10-27 Will
* Direct access Bugfixes:
  Oscillator waveshape parameter read returned wrong result.
  Addsynth voice would crash if addsynth GUI not seen.
  Subsynth hamonics GUI slider move reversed.
* Revised GUI data sending to allow reads as well as writes.

2016-10-26 Will
* Started separating out CLI replies from main direct entries.
* Completed separation up to voice level.
* All done!

2016-10-24 Will
* Implemented mising direct modulator 440Hz switch.
* Completed direct -> gui addsynthvoice.
* Updated docs.

2016-10-23 Will
* Bugfix: direct -> gui 440Hz wasn't correct for sub/pad.
* direct -> gui addsynthvoice done apart from modulators.

2016-10-22 Will
* Added Loop mode to Solo feature.
* direct -> gui padsynth completed.
* Updated docs.

2016-10-21 Will
* direct -> gui part kit mode & drum mode done.
* direct -> gui addsynth main completed.
* direct -> gui subsynth completed.
* Updated docs.

2016-10-16 Will
* Completed direct gui system/insert effects.
* More done on direct gui part.